[tool.poetry]
name = "nm"
version = "0.1.0"
description = "Jupyter notebooks that form part of the Numeric Methods course at University of Esslingen"
authors = ["Andreas Baulig <free.geronimo@hotmail.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.3"
ipykernel = "^5.5.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
